--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciencia-argentina-backend-commons",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "Ciencia Argentina nodejs backend commons",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,11 +22,13 @@
   },
   "author": "Ciencia Argentina",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/knex": "^0.16.1",
     "@types/uuid": "^8.3.0",
     "ajv": "^6.12.4",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.4",
     "objection": "^2.2.2",
     "uuid": "^8.3.0",
