--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "deploy": "npm publish"
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "eslint --fix --ext .ts .",
+    "prepare": "npm run build",
+    "preversion": "npm run lint"
   },
   "keywords": [
     "typescript",
