--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciencia-argentina-backend-commons",
-  "version": "1.3.93",
+  "version": "1.4.7",
   "description": "Ciencia Argentina nodejs backend commons",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -29,6 +29,7 @@
     "@types/knex": "^0.16.1",
     "@types/uuid": "^8.3.0",
     "ajv": "^6.12.4",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
