--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciencia-argentina-backend-commons",
-  "version": "1.4.88",
+  "version": "1.4.93",
   "description": "Ciencia Argentina nodejs backend commons",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.4",
     "objection": "^2.2.2",
+    "prom-client": "^12.0.0",
     "uuid": "^8.3.0",
     "winston": "^3.3.3"
   },
